[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.79"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
geo = "0.27.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
nom = "7.1.3"
num = "0.4.1"
